--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -10,7 +10,7 @@ ja:
    user_sessions:
      new:
        title: 'ログイン'
-       to_register_page: '登録ページへ'
+       to_signup_page: '登録ページへ'
        password_forget: 'パスワードをお忘れの方はこちら'
    boards:
      index:
