--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -25,6 +25,9 @@ ja:
        title: '掲示板一覧'
      new:
        title: '掲示板作成'
+     create:
+      success: '掲示板を作成しました'
+      fail: '掲示板を作成できませんでした'
      bookmarks:
        title: 'ブックマーク一覧'
    profiles:
