--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -28,8 +28,14 @@ ja:
      create:
       success: '掲示板を作成しました'
       fail: '掲示板を作成できませんでした'
+     show:
+       title: '掲示板詳細'
      bookmarks:
        title: 'ブックマーク一覧'
+   comments:
+     create:
+       success: 'コメントを作成しました'
+       fail: 'コメントを作成できませんでした'
    profiles:
      show:
        title: 'プロフィール'
