--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,6 +3,7 @@ ja:
      login: 'ログイン'
      register: '登録'
      logout: 'ログアウト'
+     password_reset: 'パスワードリセット'
    users:
      new:
        title: 'ユーザー登録'
@@ -56,3 +57,14 @@ ja:
      update:
        success: 'ユーザーを更新しました'
        fail: 'ユーザーを更新できませんでした'
+   password_resets:
+     new:
+       title: 'パスワードリセット申請'
+       submit: '送信'
+     edit:
+       title: 'パスワードリセット'
+     create:
+       success: 'パスワードリセット手順を送信しました'
+     update:
+       success: 'パスワードを変更しました'
+       fail: 'パスワードの変更に失敗しました'
