--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -4,6 +4,7 @@ ja:
      register: '登録'
      logout: 'ログアウト'
      password_reset: 'パスワードリセット'
+     not_authorized: '権限がありません'
    users:
      new:
        title: 'ユーザー登録'
@@ -68,3 +69,15 @@ ja:
      update:
        success: 'パスワードを変更しました'
        fail: 'パスワードの変更に失敗しました'
+   admin:
+     user_sessions:
+       new:
+         title: 'ログイン'
+       create:
+         success: 'ログインしました'
+         fail: 'ログインに失敗しました'
+       destroy:
+         success: 'ログアウトしました'
+     dashboards:
+       index:
+         title: 'ダッシュボード'
