--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -81,3 +81,28 @@ ja:
      dashboards:
        index:
          title: 'ダッシュボード'
+     boards:
+       index:
+         title: '掲示板一覧'
+       show:
+         title: '掲示板詳細'
+       edit:
+         title: '掲示板編集'
+       update:
+         success: '掲示板を更新しました'
+         fail: '掲示板を更新できませんでした'
+       destroy:
+         success: '掲示板を削除しました'
+     users:
+       index:
+         title: 'ユーザー一覧'
+       show:
+         title: 'ユーザー詳細'
+       edit:
+         title: 'ユーザー編集'
+       update:
+         success: 'ユーザーを更新しました'
+         fail: 'ユーザーを更新できませんでした'
+       destroy:
+         success: 'ユーザーを削除しました'
+
